# DATA_515

./: .coverage  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  milestones.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_test.yml
backend/: .dockerignore  .env.template  Dockerfile  MANIFEST.in  api-flask.py  app.py  environment.yml  pyproject.toml  requirements.txt  roast.py
backend/src/: app.py  main.py
backend/src/helpers/: letterboxd_analyzers.py  roast_generator.py  scrapers-roast.py  scrapers.py  scrapers_roast.py  scrappers.py
backend/tests/: test_app.py  test_main.py  test_roast_generator.py  test_scrapers_roast.py  tests_app.py
backend/tests/helpers/: test_letterboxd_analyzers.py  test_roast_generator.py  test_scrapers-roast.py  test_scrapers.py  test_scrapers_roast.py
docs/: Functional_Specification.md  component_specification.md  installation.md  milestones.md  user_stories.md
docs/technology_review/: demo.md  libraries_overview.md
example/: demo1.md
frontend/: .eslintrc.js  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Landing.css  Landing.jsx  index.css  main.jsx  setupTests.js
frontend/src/MovieReview/: AspectGraph.jsx  Error.jsx  Movie.css  Movie.jsx  MovieInfo.css  MovieInfo.jsx  VibeCheck.css  VibeCheck.jsx  Video.css  Video.jsx
frontend/src/Roast/: Roast.css  Roast.jsx
frontend/src/__tests__/: Landing.test.jsx  main.test.jsx
frontend/src/components/: HelloWorld.jsx  HelloWorld.test.jsx
(+8 files in other folders)
